# ChatterBox

./: 答辩.pptx
chat-ui/QtWidget/: QtWidget.cpp  QtWidget.h  QtWidget.pro  QtWidget.ui  QtWidget.vcxproj  QtWidget.vcxproj.filters  chat.cpp  chat.h  chat.ui  homepage.cpp  homepage.h  homepage.ui  main.cpp  people.cpp  people.h  people.ui
chatroom-client/: chatroom-client.sln
chatroom-client-QT/chatroom-client-qt/: 10001.txt  QtWidget.cpp  QtWidget.pro  QtWidget.qrc  QtWidget.ui  QtWidget.vcxproj  QtWidget.vcxproj.filters  chat.cpp  chat.h  chat.ui  clientroom-QT.sln  homepage.cpp  homepage.h  main.cpp  netcommunication.cpp  netcommunication.h  people.cpp  people.h  people.ui  regist.cpp  regist.h  regist.ui  res.qrc  window.cpp  window.h
chatroom-client-QT/chatroom-client-qt/controller/: controller.cpp  controller.h
chatroom-client-QT/chatroom-client-qt/include/: api.cpp  api.h
chatroom-client-QT/chatroom-client-qt/object/: client.cpp  (+6 more)
chatroom-client/chatroom-client/: chatroom-client.vcxproj  chatroom-client.vcxproj.filters  main.cpp
chatroom-service/: .gitignore  CMakeLists.txt
chatroom-service/chatroom-service/: CMakeLists.txt  init.cpp  init.h  main.cpp
chatroom-service/chatroom-service/controller/: controller.cpp  controller.h
chatroom-service/chatroom-service/dao/: client.cpp  client.h  message.cpp  message.h  user.cpp  user.h
chatroom-service/chatroom-service/include/: api.cpp  api.h
chatroom-service/chatroom-service/service/: service.cpp  service.h
chatroom-service/chatroom-service/util/: netUtil.h  sqlUtil.h
sql/: chatroom_sys_struct.sql
(+20 files in other folders)
